--- a/src/saar_website/templates/saar_website/chatbot.html
+++ b/src/saar_website/templates/saar_website/chatbot.html
@@ -37,8 +37,8 @@
                                         <p class="mb-0"><strong>SAARCI Assistant</strong> est conçu pour fournir des réponses rapides à vos questions sur nos produits d'assurance, nos services, et bien plus encore. Plus besoin d'attendre, posez votre question et obtenez une réponse en quelques secondes.
                                         </p>
                                     </div>
-                                    <div class="service-icon p-4">
-                                        <i class="fa fa-money-bill fa-4x text-primary"></i>
+                                    <div class="p-4">
+                                        <i class="fa fa-bolt fa-4x text-primary"></i>
                                         {% comment %} <i class="fa fa-globe fa-4x text-primary"></i> {% endcomment %}
                                     </div>
                                 </div>
@@ -50,7 +50,7 @@
                                         <p class="mb-0"><strong>SAARCI Assistant</strong> est toujours là pour vous assister. Vous pouvez accéder à ses services à tout moment, directement depuis notre site web.
                                         </p>
                                     </div>
-                                    <div class="service-icon p-4">
+                                    <div class="p-4">
                                         <i class="fas fa-history fa-4x text-primary"></i>
                                     </div>
                                 </div>
@@ -62,7 +62,7 @@
                                         <p class="mb-0"><strong>SAARCI Assistant</strong> est capable de s'adapter à vos besoins en vous offrant des réponses personnalisées en fonction de votre situation. Que vous ayez besoin d'aide pour souscrire à une nouvelle assurance, comprendre les garanties de votre contrat, ou suivre une réclamation, <strong>SAARCI Assistant</strong> est là pour vous guider.
                                         </p>
                                     </div>
-                                    <div class="service-icon p-4">
+                                    <div class="p-4">
                                         <i class="fas fa-user-tie fa-4x text-primary"></i>
                                     </div>
                                 </div>
@@ -74,7 +74,7 @@
                                         <p class="mb-0">Nous ne cessons d'améliorer <strong>SAARCI Assistant</strong> pour qu'il puisse répondre de manière encore plus efficace à vos besoins. Vos retours sont essentiels pour nous aider à perfectionner ce service.
                                         </p>
                                     </div>
-                                    <div class="service-icon p-4">
+                                    <div class="p-4">
                                         <i class="fa fa-cog fa-4x text-primary"></i>
                                     </div>
                                 </div>
@@ -85,7 +85,7 @@
                         <div class="row g-4">
                             <div class="col-12">
                                 <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                    <div class="service-icon p-4">
+                                    <div class="p-4">
                                         <i class="fas fa-lightbulb fa-4x text-primary"></i>
                                     </div>
                                     <div class="service-content">
@@ -97,7 +97,7 @@
                             </div>
                             <div class="col-12">
                                 <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                    <div class="service-icon p-4">
+                                    <div class="p-4">
                                         <i class="fas fa-wrench fa-4x text-primary"></i>
                                     </div>
                                     <div class="service-content">
@@ -109,7 +109,7 @@
                             </div>
                             <div class="col-12">
                                 <div class="service-content-inner d-flex align-items-center bg-white border border-primary rounded p-4 ps-0">
-                                    <div class="service-icon p-4">
+                                    <div class="p-4">
                                         <i class="fas fa-handshake fa-4x text-primary"></i>
                                     </div>
                                     <div class="service-content">
