--- a/src/saar_website/templates/saar_website/contact.html
+++ b/src/saar_website/templates/saar_website/contact.html
@@ -9,7 +9,7 @@
         <div class="container text-center py-5" style="max-width: 900px;">
             <h3 class="text-white display-3 mb-4">Contactez Nous</h1>
             <ol class="breadcrumb justify-content-center mb-0">
-                <li class="breadcrumb-item"><a href="{% url 'index' %}">Notre Société</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'index' %}" class="text-white">Notre Société</a></li>
                 {% comment %} <li class="breadcrumb-item"><a href="#">Pages</a></li> {% endcomment %}
                 <li class="breadcrumb-item active text-white">Contact</li>
             </ol>    
