--- a/src/saar_website/templates/saar_website/valeurs_review.html
+++ b/src/saar_website/templates/saar_website/valeurs_review.html
@@ -10,8 +10,8 @@
         <h1 class="text-white display-3 mb-4 fw-bold">Nos Valeurs</h1>
         <p class="text-white-50 fs-5 mb-4">Les piliers qui guident notre engagement quotidien</p>
         <ol class="breadcrumb justify-content-center mb-0">
-            <li class="breadcrumb-item"><a href="{% url 'index' %}" class="text-decoration-none">Accueil</a></li>
-            <li class="breadcrumb-item"><a href="#" class="text-decoration-none">Notre Société</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'index' %}" class="text-white">Accueil</a></li>
+            <li class="breadcrumb-item"><a href="#" class="text-white">Notre Société</a></li>
             <li class="breadcrumb-item active text-white">Nos Valeurs</li>
         </ol>    
     </div>
