--- a/src/saar_website/templates/saar_website/about_grp_review.html
+++ b/src/saar_website/templates/saar_website/about_grp_review.html
@@ -6,12 +6,12 @@
 
 <!-- Header Start -->
 <div class="container-fluid bg-breadcrum">
-    <div class="container text-center" style="max-width: 900px;">
+    <div class="container text-center py-5" style="max-width: 900px;">
         <h1 class="text-white display-3 mb-4 fw-bold">Le Groupe SAAR</h1>
         <p class="text-white-50 fs-5 mb-4">World Class African Insurance depuis 1990</p>
         <ol class="breadcrumb justify-content-center mb-0">
-            <li class="breadcrumb-item"><a href="{% url 'index' %}" class="text-decoration-none">Accueil</a></li>
-            <li class="breadcrumb-item"><a href="#" class="text-decoration-none">Notre Société</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'index' %}" class="text-white">Accueil</a></li>
+            <li class="breadcrumb-item"><a href="#" class="text-white">Notre Société</a></li>
             <li class="breadcrumb-item active text-white">Le Groupe SAAR</li>
         </ol>    
     </div>
